fixx issues with header not showing up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,9 @@ body {
   background-repeat: no-repeat;
 
 }
-
+.full-page {
+  margin-top: 54px;
+}
 .main-feed-container {
   background-position: cover;
   height: 100vh;
